@@ -1,4 +1,9 @@
 2009-04-17  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/encoding.c, ext/oci8/lob.c, ext/oci8/metadata.c,
+	  ext/oci8/oci8.c: suppress "warning C4761: integral size mismatch
+	  in argument; conversion supplied" when compiled by Visual C++.
+
+2009-04-17  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/apiwrap.yml, ext/oci8/env.c, ext/oci8/extconf.rb,
 	  ext/oci8/oci8.h, ext/oci8/oci8lib.c: OCIEnv is initialized
 	    when it is needed. This makes a basis to enable an event
